test/pure/negative/impure3.mli
val f : int -> int
(*@ y = f x
    pure
    raises Not_found -> true *)
