test/pure/negative/impure3.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : int -> int[@@gospel
                    {| y = f x
    pure
    raises Not_found -> true |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

val f : int -> int
(*@ y = f x
    with ...
     *)
File "impure3.mli", line 5, characters 37-38:
Error: Type checking error: a pure function cannot raise exceptions
